@@ -1,3 +1,9 @@
+2004-10-10	Benedikt Meurer <benny@xfce.org>
+
+	* Terminal.ui, terminal/terminal-window.c: Load the UI description
+	  from the Terminal.ui file at runtime to allow users to customize
+	  the menus.
+
 2004-10-03	Benedikt Meurer <benny@xfce.org>
 
 	* HACKING: Added note to update gnomefiles.org entry when releasing.
